package ignition.transport.msgs;

/// \ingroup ignition_transport_msgs
/// \interface PublisherData
/// \brief A message storing information about Publishers. Used in Discovery.

message PublisherData
{
	/// \brief Topic name.
	required string topic       = 1;

	/// \brief Address of publisher.
	required string addr        = 2;

	/// \brief Process uuid.
	required string pUuid       = 3;

	/// \brief Node uuid.
	required string nUuid       = 4;

	/// \brief Scope of topic.
	required uint32 scope       = 5;

	/// \brief Control address (messages)/socket id (services).
	optional string ctrl        = 6;

	/// \brief Message type (messages)/request message type (services).
	optional string msgTypeName = 7;

	/// \brief Reply message type (services only).
	optional string repTypeName = 8;
}
